--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -15,5 +15,9 @@
     "Mensaje enviado con éxito" : "Message sent successfully",
     "Home" : "Home",
     "Contacto" : "Contact",
-    "Tecnologías" : "Technologies"
+    "Tecnologías" : "Technologies",
+    "Campo inválido" : "Invalid field",
+    " El nombre no puede estar vacío." : " The name cannot be empty.",
+    " El mensaje no puede estar vacío." : " The message cannot be empty.",
+    " Asegurese de que tiene formato de Email." : " Make sure the email format is correct."
 }
