--- a/public/locales/sp/translation.json
+++ b/public/locales/sp/translation.json
@@ -15,5 +15,9 @@
     "Mensaje enviado con éxito" : "Mensaje enviado con éxito",
     "Home" : "Home",
     "Contacto" : "Contacto",
-    "Tecnologías" : "Tecnologías"
+    "Tecnologías" : "Tecnologías",
+    "Campo inválido" : "Campo inválido.",
+    " El nombre no puede estar vacío." : " El nombre no puede estar vacío.",
+    " El mensaje no puede estar vacío." : " El mensaje no puede estar vacío.",
+    " Asegurese de que tiene formato de Email." : " Asegurese de que tiene formato de Email."
 }
