--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -6,7 +6,7 @@
     "Si quieres saber más no dudes en descargar mi currículum" : "If you want to know more, don't hesitate to download my Cv",
     "Descargar Cv" : "Download Cv",
     "Experiencia" : "Experience",
-    "Mi área principal de especialización es el desarrollo Frontend pero mi formación es FullStack." : "My main area of expertise is Frontend development, but my training is FullStack.",
+    "Mi área principal de especialización es el desarrollo Frontend pero mi formación es FullStack. Partiendo de la base de HTML, CSS y JavaScript me he especializado en la creación de aplicaciones con React.": "My main area of specialization is Frontend development, but my training is FullStack. Starting with HTML, CSS, and JavaScript, I have specialized in creating applications with React.",
     "Creación de aplicaciones web con React y Vite, gestión de estados globales con Redux Toolkit y tipado con TypeScript. Gestión de la información en tiempo real con WebSockets. Diseño responsive con CSS y uso de frameworks y librerías como Tailwind, Bootstrap o Mui. Creación de prototipos basados en principios UX/UI con Figma. Manejo de Backend con Node y Express, bases de datos con MySql, conocimientos de API REST. Control de versiones con Git." : "Web application development with React and Vite, global state management with Redux Toolkit, and typing with TypeScript. Real-time information management with WebSockets. Responsive design with CSS and use of frameworks and libraries such as Tailwind, Bootstrap, or MUI. Prototyping based on UX/UI principles with Figma. Backend handling with Node and Express, databases with MySQL, knowledge of REST APIs. Version control with Git.",
     "Nombre" : "Name",
     "Email" : "Email",
@@ -19,5 +19,8 @@
     "Campo inválido." : "Invalid field.",
     " El nombre no puede estar vacío." : " The name cannot be empty.",
     " El mensaje no puede estar vacío." : " The message cannot be empty.",
-    " Asegúrese de que tiene formato de Email." : " Make sure the email format is correct."
+    " Asegúrese de que tiene formato de Email." : " Make sure the email format is correct.",
+    "Política de privacidad" : "Privacy Policy",
+    "De conformidad con lo establecido en la Ley de Protección de Datos de Carácter Personal y Reglamento UE 2016/679, en caso de que nos envíe algún correo electrónico a la dirección indicada en la misma, o rellene algún formulario de recogida de datos, le informamos de que los datos de carácter personal que nos proporcione, serán registrados en el fichero del que es responsable jorgenovorodriguez.netlify.app, con la finalidad de gestionar su consulta." : "In accordance with the provisions of the Personal Data Protection Law and EU Regulation 2016/679, in the event that you send us an email to the address indicated, or fill out a data collection form, we inform you that the personal data you provide will be registered in the file for which jorgenovorodriguez.netlify.app is responsible, with the purpose of managing your inquiry.",
+    "Comencé mi formación de manera autodidácta, pasando luego a hacer un bootcamp de programación web en Hack a Boss. Por suerte he podido seguir ampliando mis conocimientos gracias a mi experiencia laboral, donde me he encontrado con compañeros de los que he aprendido mucho.": "I started my training in a self-taught way, later attending a web programming bootcamp at Hack a Boss. Fortunately, I have been able to continue expanding my knowledge thanks to my work experience, where I have met colleagues from whom I have learned a lot."
 }
