--- a/public/locales/sp/translation.json
+++ b/public/locales/sp/translation.json
@@ -6,7 +6,7 @@
     "Si quieres saber más no dudes en descargar mi currículum" : "Si quieres saber más no dudes en descargar mi currículum",
     "Descargar Cv" : "Descargar Cv",
     "Experiencia" : "Experiencia",
-    "Mi área principal de especialización es el desarrollo Frontend pero mi formación es FullStack." : "Mi área principal de especialización es el desarrollo Frontend pero mi formación es FullStack.",
+    "Mi área principal de especialización es el desarrollo Frontend pero mi formación es FullStack. Partiendo de la base de HTML, CSS y JavaScript me he especializado en la creación de aplicaciones con React.": "Mi área principal de especialización es el desarrollo Frontend pero mi formación es FullStack. Partiendo de la base de HTML, CSS y JavaScript me he especializado en la creación de aplicaciones con React.",
     "Creación de aplicaciones web con React y Vite, gestión de estados globales con Redux Toolkit y tipado con TypeScript. Gestión de la información en tiempo real con WebSockets. Diseño responsive con CSS y uso de frameworks y librerías como Tailwind, Bootstrap o Mui. Creación de prototipos basados en principios UX/UI con Figma. Manejo de Backend con Node y Express, bases de datos con MySql, conocimientos de API REST. Control de versiones con Git." : "Creación de aplicaciones web con React y Vite, gestión de estados globales con Redux Toolkit y tipado con TypeScript. Gestión de la información en tiempo real con WebSockets. Diseño responsive con CSS y uso de frameworks y librerías como Tailwind, Bootstrap o Mui. Creación de prototipos basados en principios UX/UI con Figma. Manejo de Backend con Node y Express, bases de datos con MySql, conocimientos de API REST. Control de versiones con Git.",
     "Nombre" : "Nombre",
     "Email" : "Email",
@@ -19,5 +19,8 @@
     "Campo inválido." : "Campo inválido.",
     " El nombre no puede estar vacío." : " El nombre no puede estar vacío.",
     " El mensaje no puede estar vacío." : " El mensaje no puede estar vacío.",
-    " Asegúrese de que tiene formato de Email." : " Asegurese de que tiene formato de Email."
+    " Asegúrese de que tiene formato de Email." : " Asegurese de que tiene formato de Email.",
+    "Política de privacidad" : "Política de privacidad",
+    "De conformidad con lo establecido en la Ley de Protección de Datos de Carácter Personal y Reglamento UE 2016/679, en caso de que nos envíe algún correo electrónico a la dirección indicada en la misma, o rellene algún formulario de recogida de datos, le informamos de que los datos de carácter personal que nos proporcione, serán registrados en el fichero del que es responsable jorgenovorodriguez.netlify.app, con la finalidad de gestionar su consulta." : "De conformidad con lo establecido en la Ley de Protección de Datos de Carácter Personal y Reglamento UE 2016/679, en caso de que nos envíe algún correo electrónico a la dirección indicada en la misma, o rellene algún formulario de recogida de datos, le informamos de que los datos de carácter personal que nos proporcione, serán registrados en el fichero del que es responsable jorgenovorodriguez.netlify.app, con la finalidad de gestionar su consulta.",
+    "Comencé mi formación de manera autodidácta, pasando luego a hacer un bootcamp de programación web en Hack a Boss. Por suerte he podido seguir ampliando mis conocimientos gracias a mi experiencia laboral, donde me he encontrado con compañeros de los que he aprendido mucho.": "Comencé mi formación de manera autodidácta, pasando luego a hacer un bootcamp de programación web en Hack a Boss. Por suerte he podido seguir ampliando mis conocimientos gracias a mi experiencia laboral, donde me he encontrado con compañeros de los que he aprendido mucho."
 }
