--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,6 +1,6 @@
 {
     "Hola, soy Jorge": "Hello, I'm Jorge",
-    "FrontEnd Developer": "FrontEnd Developer",
+    "Desarrollador de FrontEnd": "FrontEnd Developer",
     "Sobre mí": "About me",
     "Partiendo de la base de HTML, CSS Y JavaScript me especializado en la creación de aplicaciones con React. Me considero una persona autodidacta y comprometida, con capacidad para el aprendizaje y el trabajo en equipo." : "Starting from the basics of HTML, CSS, and JavaScript, I have specialized in creating applications with React. I consider myself a self-taught and committed person, with the ability to learn and work in a team.",
     "Si quieres saber más no dudes en descargar mi currículum" : "If you want to know more, don't hesitate to download my Cv",
