--- a/public/locales/sp/translation.json
+++ b/public/locales/sp/translation.json
@@ -1,6 +1,6 @@
 {
     "Hola, soy Jorge": "Hola, soy Jorge",
-    "FrontEnd Developer": "FrontEnd Developer",
+    "Desarrollador de FrontEnd": "FrontEnd Developer",
     "Sobre mí": "Sobre mí",
     "Partiendo de la base de HTML, CSS Y JavaScript me especializado en la creación de aplicaciones con React. Me considero una persona autodidacta y comprometida, con capacidad para el aprendizaje y el trabajo en equipo." : "Partiendo de la base de HTML, CSS Y JavaScript me especializado en la creación de aplicaciones con React. Me considero una persona autodidacta y comprometida, con capacidad para el aprendizaje y el trabajo en equipo.",
     "Si quieres saber más no dudes en descargar mi currículum" : "Si quieres saber más no dudes en descargar mi currículum",
