--- a/public/locales/sp/translation.json
+++ b/public/locales/sp/translation.json
@@ -54,5 +54,6 @@
     "Error desconocido" : "Error desconocido",
     "useError debe ser usado dentro de un ErrorProvider" : "useError debe ser usado dentro de un ErrorProvider",
     "Error al obtener los datos de experiencia" : "Error al obtener los datos de experiencia",
-    "Error al obtener los proyectos" : "Error al obtener los proyectos"
+    "Error al obtener los proyectos" : "Error al obtener los proyectos",
+    "Error al enviar el mensaje" : "Error al enviar el mensaje"
 }
