--- a/public/locales/sp/translation.json
+++ b/public/locales/sp/translation.json
@@ -57,5 +57,8 @@
     "Error al obtener los proyectos" : "Error al obtener los proyectos",
     "Error al enviar el mensaje" : "Error al enviar el mensaje",
     "Email guardado en el portapapeles" : "Email guardado en el portapapeles",
-    "Error al abrir el enlace" : "Error al abrir el enlace"
+    "Error al abrir el enlace" : "Error al abrir el enlace",
+    "Error al descargar el documento" : "Error al descargar el documento",
+    "Documento descargado" : "Documento descargado"
+
 }
